fixing white space

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,6 @@ html {
 
 
 body {
-  margin-top: 60px;
   width: 100%;
   font-weight: 400;
   overflow-x: hidden;
